fixed le project alignment on the homepage

--- a/app/routes/homepage/homepage.scss
+++ b/app/routes/homepage/homepage.scss
@@ -80,7 +80,7 @@
 .project {
 	width: 97%;
 	margin-bottom: 24px;
-	// min-height: 30%;
+	height: 30%;
 }
 
 .title {
@@ -91,6 +91,6 @@
 .buttonWrapper {
 	display: flex;
 	justify-content: flex-end;
-	margin-bottom: 50px;
-	margin-top: 8px;
+	margin-bottom: 40px;
+	margin-top: 90px;
 }
